[project]
name = "amb2api"
version = "0.6.1"
description = "AMB2API - AssemblyAI LLM Gateway OpenAI-compatible proxy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "httpx[socks]>=0.28.1",
    "hypercorn>=0.17.3",
    "motor>=3.7.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "toml>=0.10.2",
]

[dependency-groups]
dev = [
    "hypothesis>=6.148.2",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
# 只收集 tests/ 下的单元测试；tools/ 是手动脚本（如 pay_test.py），不应被收集
testpaths = ["tests"]
